errors.txt
app/release_notifier.py:630:5: F821 undefined name 'logger'
    logger.info("\n🛑 終了シグナルを受信しました。処理を停止しています...")
    ^
app/release_notifier.py:687:9: F821 undefined name 'logger'
        logger.info(f"💥 システム初期化エラー: {e}", file=sys.stderr)
        ^
app/routes/admin_dashboard.py:347:2: E999 SyntaxError: invalid syntax
import logging
 ^
app/start_web_ui.py:17:2: E999 IndentationError: expected an indented block after function definition on line 15
logger = logging.getLogger(__name__)
 ^
app/web_app_with_api_auth.py:450:5: E999 IndentationError: unexpected indent
modules/backend_validator.py:987:9: F821 undefined name 'logger'
        logger.info("Starting backend validation...")
        ^
modules/backend_validator.py:992:13: F821 undefined name 'logger'
            logger.info(f"\n{'='*60}")
            ^
modules/backend_validator.py:993:13: F821 undefined name 'logger'
            logger.info("BACKEND VALIDATION REPORT")
            ^
modules/backend_validator.py:994:13: F821 undefined name 'logger'
            logger.info(f"{'='*60}")
            ^
modules/backend_validator.py:995:13: F821 undefined name 'logger'
            logger.info(f"Total Tests: {report.total_tests}")
            ^
modules/backend_validator.py:996:13: F821 undefined name 'logger'
            logger.info(f"Passed: {report.passed_tests}")
            ^
modules/backend_validator.py:997:13: F821 undefined name 'logger'
            logger.error(f"Failed")
            ^
modules/backend_validator.py:998:13: F821 undefined name 'logger'
            logger.info(f"Success")
            ^
modules/backend_validator.py:999:13: F821 undefined name 'logger'
            logger.info(f"Total Duration: {report.total_duration:.2f}s")
            ^
modules/backend_validator.py:1000:13: F821 undefined name 'logger'
            logger.info(f"{'='*60}")
            ^
modules/backend_validator.py:1005:17: F821 undefined name 'logger'
                logger.info("\nFAILED TESTS:")
                ^
modules/backend_validator.py:1007:21: F821 undefined name 'logger'
                    logger.info(f"  ✗ {test.test_name}: {test.error_message}")
                    ^
modules/backend_validator.py:1014:13: F821 undefined name 'logger'
            logger.info(f"Validation failed with error: {e}")
            ^
modules/error_notifier.py:299:9: F821 undefined name 'logger'
        logger.info(
        ^
modules/error_notifier.py:302:9: F821 undefined name 'logger'
        logger.info(
        ^
modules/error_notifier.py:318:9: F821 undefined name 'logger'
        logger.info("✅ エラー通知メール送信完了")
        ^
modules/error_notifier.py:321:9: F821 undefined name 'logger'
        logger.info("❌ エラー通知メール送信失敗")
        ^
modules/qa_validation.py:1114:5: F821 undefined name 'logger'
    logger.info("Starting comprehensive QA audit...")
    ^
modules/qa_validation.py:1117:5: F821 undefined name 'logger'
    logger.info("\nQA Audit Results:")
    ^
modules/qa_validation.py:1118:5: F821 undefined name 'logger'
    logger.info(f"Overall Score: {results['overall_score']}/100")
    ^
modules/qa_validation.py:1119:5: F821 undefined name 'logger'
    logger.info(f"Quality Level: {results['summary']['quality_level']}")
    ^
modules/qa_validation.py:1120:5: F821 undefined name 'logger'
    logger.info(f"Total Issues: {results['summary']['total_issues_found']}")
    ^
modules/qa_validation.py:1121:5: F821 undefined name 'logger'
    logger.info(f"Code Quality: {results['summary']['code_quality_score']}/100")
    ^
modules/qa_validation.py:1122:5: F821 undefined name 'logger'
    logger.info(f"Data Integrity: {results['summary']['data_integrity_score']}/100")
    ^
modules/qa_validation.py:1123:5: F821 undefined name 'logger'
    logger.info(f"Performance: {results['summary']['performance_score']}/100")
    ^
modules/qa_validation.py:1126:9: F821 undefined name 'logger'
        logger.info("\nTop Action Items:")
        ^
modules/qa_validation.py:1128:13: F821 undefined name 'logger'
            logger.info(f"{i}. {item}")
            ^
modules/qa_validation.py:1133:9: F821 undefined name 'logger'
        logger.info(f"\nDetailed report saved to: {output_file}")
        ^
modules/security_compliance.py:893:5: F821 undefined name 'logger'
    logger.info("Starting security audit...")
    ^
modules/security_compliance.py:896:5: F821 undefined name 'logger'
    logger.info("\nSecurity Audit Results:")
    ^
modules/security_compliance.py:897:5: F821 undefined name 'logger'
    logger.info(f"Overall Score: {results['overall_score']}/100")
    ^
modules/security_compliance.py:898:5: F821 undefined name 'logger'
    logger.info(f"Total Findings: {results['total_findings']}")
    ^
modules/security_compliance.py:899:5: F821 undefined name 'logger'
    logger.info(f"Critical: {results['critical_findings']}")
    ^
modules/security_compliance.py:900:5: F821 undefined name 'logger'
    logger.info(f"High: {results['high_findings']}")
    ^
modules/security_compliance.py:901:5: F821 undefined name 'logger'
    logger.info(f"Medium: {results['medium_findings']}")
    ^
modules/security_compliance.py:902:5: F821 undefined name 'logger'
    logger.info(f"Low: {results['low_findings']}")
    ^
modules/security_compliance.py:905:9: F821 undefined name 'logger'
        logger.info("\nRecommendations:")
        ^
modules/security_compliance.py:907:13: F821 undefined name 'logger'
            logger.info(f"- {rec}")
            ^
modules/security_compliance.py:912:9: F821 undefined name 'logger'
        logger.info(f"\nDetailed report saved to: {output_file}")
        ^
modules/security_compliance.py:918:5: F821 undefined name 'logger'
    logger.info(
    ^
modules/title_translator.py:173:5: E999 IndentationError: unexpected indent
    translator = TitleTranslator()
    ^
4     E999 SyntaxError: invalid syntax
42    F821 undefined name 'logger'
46
